fix UI scrollbar issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,6 +70,15 @@
   * {
     @apply border-border;
   }
+  html {
+    overflow-y: scroll;
+  }
+  @supports (scrollbar-gutter: stable) {
+    html {
+      overflow-y: auto;
+      scrollbar-gutter: stable;
+    }
+  }
   body {
     @apply bg-background text-foreground;
   }
